--- a/gerenciamento-processos-ui/package.json
+++ b/gerenciamento-processos-ui/package.json
@@ -1,14 +1,23 @@
 {
-  "name": "gerenciamento-processos-ui",
+  "name": "gerenciamento-processo-ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "@types/react-transition-group": "^4.2.3",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
+    "prime-grid": "^1.5.0",
+    "primeicons": "^2.0.0",
+    "primereact": "^3.3.2",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-redux": "^7.1.3",
+    "redux-thunk": "^2.3.0",
+    "redux": "^4.0.5",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
