--- a/gerenciamento-processos-ui/package.json
+++ b/gerenciamento-processos-ui/package.json
@@ -7,17 +7,18 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "moment": "^2.29.1",
     "prime-grid": "^1.5.0",
     "primeicons": "^2.0.0",
     "primereact": "^3.3.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
-    "react-redux": "^7.1.3",
-    "redux-thunk": "^2.3.0",
-    "redux": "^4.0.5",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-redux": "^7.1.3",
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
